代码优化和重构
- 移除了各Service类中的多余字段，简化了类的结构
- 删除了ClztoolsConsoleApplication中的@MapperScan注解
- 优化了CookieUtils中的编码处理，使用StandardCharsets.UTF_8替换"utf-8"字符串
- 删除了BaseMapper中的多余导入，简化了接口定义