@@ -4,9 +4,9 @@ import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class CookieUtils {
     public static void setCookie(HttpServletResponse response, String name, String value) {
@@ -25,11 +25,7 @@ public class CookieUtils {
         Cookie cookie = new Cookie(name, null);
         cookie.setPath(path);
         cookie.setMaxAge(maxAge);
-        try {
-            cookie.setValue(URLEncoder.encode(value, "utf-8"));
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+        cookie.setValue(URLEncoder.encode(value, StandardCharsets.UTF_8));
         response.addCookie(cookie);
     }
 
@@ -47,11 +43,7 @@ public class CookieUtils {
         if (cookies != null) {
             for (Cookie cookie : cookies) {
                 if (cookie.getName().equals(name)) {
-                    try {
-                        value = URLDecoder.decode(cookie.getValue(), "utf-8");
-                    } catch (UnsupportedEncodingException e) {
-                        e.printStackTrace();
-                    }
+                    value = URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8);
                     if (isRemove) {
                         cookie.setMaxAge(0);
                         response.addCookie(cookie);
